--- a/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
+++ b/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
@@ -3,7 +3,7 @@
     <div class="row mb-5">
       <div class="col-lg-8 col-md-7">
         <div class="row">
-          <!-- <div class="col-lg-5">
+         <!-- <div class="col-lg-5">
             <form class="form-inline">
               <div class="form-group">
               <label>{{"dashboard.sortBy" | translate}} : </label>
@@ -15,10 +15,10 @@
               </select>
               </div>
             </form>
-          </div>
+          </div> -->
           <div class="col-lg-12 mt-3">
             <div class="clearfix">
-              <div class="alert alert-find alert-dismissible" role="alert">
+              <!-- <div class="alert alert-find alert-dismissible" role="alert">
                 <a href="#" class="text-dark"> India (15) </a>
               </div>
               <div class="alert alert-find alert-dismissible " role="alert">
@@ -26,13 +26,13 @@
               </div>
               <div class="alert alert-find alert-dismissible " role="alert">
                 <a href="#" class="text-dark"> UK (7) </a>
-              </div>
-              <div class="alert alert-find alert-dismissible " role="alert">
-                <a href="#" class="text-dark"> Singapore (5) </a>
+              </div> -->
+              <div *ngIf="postedJobs.length > 0" class="alert alert-find alert-dismissible " role="alert">
+                <a style="color: #ff2972;"> {{postedJobs.length}} Records Found</a>
               </div>
             </div>
-          </div> -->
-        </div>
+          </div> 
+	  </div>
         <ng-container *ngIf="postedJobs.length > 0; else elseTemplate">
           <div class="row mt-4 mb-4" *ngFor="let item of postedJobs; let i=index">
             <div class="col-lg-12">
@@ -40,7 +40,8 @@
                 <div class="card-body">
                   <div class="clearfix">
                     <div class="float-left">
-                      <a href="javascript:;" [routerLink]="['/user/job-matches', item?.id]" >
+                      <a href="javascript:;"  [routerLink]="[ '/user/job-matches/details' ]" [queryParams]="{id: item?.id }"
+					 >
                         <h5 class="text-capitalize">{{item?.title}}</h5>
                       </a>
                     </div>
@@ -78,11 +79,18 @@
         <ng-template #elseTemplate>
           <p>No Jobs Found</p>
         </ng-template>
-        <div class="d-flex justify-content-center" *ngIf="((postedJobMeta?.count > 0 && postedJobMeta?.total > 25) && (postedJobMeta?.total != postedJobs?.length))">
+		<div class="d-flex justify-content-center" style="background: #f8f8f8;"  *ngIf="postedJobMeta?.count > 0 && postedJobMeta?.total > 10" >
+		<mat-paginator style="background: #f8f8f8;color: #000;" (page)="handlePageEvent($event)"
+    [length]="length"
+    [pageSize]="limit"
+    [pageIndex]="page-1">
+</mat-paginator>
+</div>
+        <!-- <div class="d-flex justify-content-center" *ngIf="((postedJobMeta?.count > 0 && postedJobMeta?.total > 25) && (postedJobMeta?.total != postedJobs?.length))">
           <button (click)="onLoadMoreJob()" class="btn btn-theme-blue" type="button">
             Load More
           </button>
-        </div>
+        </div> -->
       </div>
       <div class="col-lg-4 col-md-5">
         <div class="title">
