--- a/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
@@ -324,12 +324,12 @@
 			<div class="  info-box" *ngIf="jobInfo.match_select?.travel_opportunity=='0'">
 				<ul class="list-group">
                       <li class="list-group-item">
-                        <span *ngIf="matchedElement && (jobInfo.travel_opportunity >= userInfo?.travel)">
+                        <span *ngIf="matchedElement && (jobInfo.travel_opportunity <= userInfo?.travel)">
                           <i class="fa fa-check text-green "></i>
                           {{(jobInfo.travel_opportunity || jobInfo.travel_opportunity == 0) ?
                             jobInfo.travel_opportunity == 0 ? 'No' : jobInfo.travel_opportunity + '%' : '--'}}
                         </span>
-                        <span *ngIf="missingElement && (jobInfo.travel_opportunity < userInfo?.travel)">
+                        <span *ngIf="missingElement && (jobInfo.travel_opportunity > userInfo?.travel)">
                         <i class="fa fa-times text-danger "></i>
                         {{(jobInfo.travel_opportunity || jobInfo.travel_opportunity == 0) ?
                           jobInfo.travel_opportunity == 0 ? 'No' : jobInfo.travel_opportunity + '%' : '--'}}
@@ -709,12 +709,12 @@
 			<div class="  info-box" *ngIf="jobInfo.match_select?.travel_opportunity=='1'">
 				<ul class="list-group">
                       <li class="list-group-item">
-                        <span *ngIf="matchedElement && (jobInfo.travel_opportunity >= userInfo?.travel)">
+                        <span *ngIf="matchedElement && (jobInfo.travel_opportunity <= userInfo?.travel)">
                           <i class="fa fa-check text-green "></i>
                           {{(jobInfo.travel_opportunity || jobInfo.travel_opportunity == 0) ?
                             jobInfo.travel_opportunity == 0 ? 'No' : jobInfo.travel_opportunity + '%' : '--'}}
                         </span>
-                        <span *ngIf="missingElement && (jobInfo.travel_opportunity < userInfo?.travel)">
+                        <span *ngIf="missingElement && (jobInfo.travel_opportunity > userInfo?.travel)">
                         <i class="fa fa-times text-danger "></i>
                         {{(jobInfo.travel_opportunity || jobInfo.travel_opportunity == 0) ?
                           jobInfo.travel_opportunity == 0 ? 'No' : jobInfo.travel_opportunity + '%' : '--'}}
@@ -1096,12 +1096,12 @@
 			<div class="  info-box" *ngIf="jobInfo.match_select?.travel_opportunity=='2'">
 				<ul class="list-group">
                       <li class="list-group-item">
-                        <span *ngIf="matchedElement && (jobInfo.travel_opportunity >= userInfo?.travel)">
+                        <span *ngIf="matchedElement && (jobInfo.travel_opportunity <= userInfo?.travel)">
                           <i class="fa fa-check text-green "></i>
                           {{(jobInfo.travel_opportunity || jobInfo.travel_opportunity == 0) ?
                             jobInfo.travel_opportunity == 0 ? 'No' : jobInfo.travel_opportunity + '%' : '--'}}
                         </span>
-                        <span *ngIf="missingElement && (jobInfo.travel_opportunity < userInfo?.travel)">
+                        <span *ngIf="missingElement && (jobInfo.travel_opportunity > userInfo?.travel)">
                         <i class="fa fa-times text-danger "></i>
                         {{(jobInfo.travel_opportunity || jobInfo.travel_opportunity == 0) ?
                           jobInfo.travel_opportunity == 0 ? 'No' : jobInfo.travel_opportunity + '%' : '--'}}
@@ -1483,12 +1483,12 @@
 			<div class="  info-box" *ngIf="jobInfo.match_select?.travel_opportunity=='' && jobInfo?.travel_opportunity ">
 				<ul class="list-group">
                       <li class="list-group-item">
-                        <span *ngIf="matchedElement && (jobInfo.travel_opportunity >= userInfo?.travel)">
+                        <span *ngIf="matchedElement && (jobInfo.travel_opportunity <= userInfo?.travel)">
                           <i class="fa fa-check text-green "></i>
                           {{(jobInfo.travel_opportunity || jobInfo.travel_opportunity == 0) ?
                             jobInfo.travel_opportunity == 0 ? 'No' : jobInfo.travel_opportunity + '%' : '--'}}
                         </span>
-                        <span *ngIf="missingElement && (jobInfo.travel_opportunity < userInfo?.travel)">
+                        <span *ngIf="missingElement && (jobInfo.travel_opportunity > userInfo?.travel)">
                         <i class="fa fa-times text-danger "></i>
                         {{(jobInfo.travel_opportunity || jobInfo.travel_opportunity == 0) ?
                           jobInfo.travel_opportunity == 0 ? 'No' : jobInfo.travel_opportunity + '%' : '--'}}
